--- a/src/pages/GameOver/GameOver.module.css
+++ b/src/pages/GameOver/GameOver.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: 100vh;
+    height: calc(100vh - 144px);
     display: flex;
     justify-content: center;
     align-items: center;
