--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,5 +1,5 @@
 .login-container {
-  height: 100vh;
+  height: calc(100vh - 144px);
   display: flex;
   justify-content: center;
   align-items: center;
